Fixed menu on mobile.

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -29,7 +29,6 @@ a:hover {
 }
 
 #container {
-  min-height: 100%;
   position: relative;
   max-width: 1440px;
   margin: 0 auto;
